overflow fix

--- a/!DATA!/dictgen/styles/style.css
+++ b/!DATA!/dictgen/styles/style.css
@@ -114,7 +114,8 @@ html {
     padding: 1.5pc;
     font-family: "Junicode", serif;
     font-variant-numeric: oldstyle-nums;
-    overflow: auto;
+    overflow-x: hidden;
+    overflow-y: auto;
 }
 body {
     margin: auto;
